--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.14",
+        "postcss-loader": "^7.2.4",
+        "tailwindcss": "^3.3.1"
     }
 }
