--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "autoprefixer": "^10.4.14",
         "postcss-loader": "^7.2.4",
-        "tailwindcss": "^3.3.1"
+        "tailwindcss": "^3.3.1",
+        "tw-elements": "^1.0.0-beta2"
     }
 }
