--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,3 +23,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\EventSubscriber\HashPasswordListener:
+        tags:
+            - { name: doctrine.orm.entity_listener, entity: App\Entity\User, event: prePersist, method: hashPassword }
+            - { name: doctrine.orm.entity_listener, entity: App\Entity\User, event: preUpdate, method: hashPassword }
