Affichage images dans ProductCrudController

--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -2,3 +2,13 @@
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
     driver: "gd"
+
+    webp:
+        generate: true
+
+    filter_sets:
+        original: ~
+        admin_thumbnail:
+            filters:
+                thumbnail:
+                    size: [150, 150]
