--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/console": "6.2.*",
         "symfony/doctrine-messenger": "6.2.*",
         "symfony/dotenv": "6.2.*",
+        "symfony/event-dispatcher": "6.2.*",
         "symfony/expression-language": "6.2.*",
         "symfony/flex": "^2",
         "symfony/form": "6.2.*",
