--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -10,6 +10,11 @@ vich_uploader:
             upload_destination: '%kernel.project_dir%/public/images/products'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
+        header_images:
+                    uri_prefix: /uploads/header_images
+                    upload_destination: '%kernel.project_dir%/public/uploads/header_images'
+                    namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+
 
     #mappings:
     #    products:
