--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -10,6 +10,12 @@ vich_uploader:
             upload_destination: '%kernel.project_dir%/public/uploads/images/products'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
+        header_image:
+            uri_prefix: /uploads/images/headers
+            upload_destination: '%kernel.project_dir%/public/uploads/images/headers'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+            delete_on_remove: true
+
 
     #mappings:
     #    products:
