--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -18,7 +18,7 @@ liip_imagine:
             filters:
                 thumbnail:
                     size: [1080, 608] # Largeur et hauteur souhaitées
-                    mode: outbound
+                    mode: inset
 
         navbar_logo_thumbnail:
             filters:
