--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -19,6 +19,10 @@ liip_imagine:
                 thumbnail:
                     size: [1080, 608] # Largeur et hauteur souhaitées
                     mode: inset
+                    options:
+                            jpeg_quality: 85
+                            png_compression_level: 8
+                            webp_quality: 85
 
         navbar_logo_thumbnail:
             filters:
@@ -30,29 +34,49 @@ liip_imagine:
                 thumbnail:
                     size: [460, 575] # Largeur et hauteur souhaitées pour les produits
                     mode: inset
+                    options:
+                            jpeg_quality: 85
+                            png_compression_level: 8
+                            webp_quality: 85
 
         header_large:
             filters:
                 thumbnail:
                     size: [1600, 900]
                     mode: inset
+                    options:
+                        jpeg_quality: 85
+                        png_compression_level: 8
+                        webp_quality: 85
 
         header_medium:
             filters:
                 thumbnail:
                     size: [1024, 576]
                     mode: inset
+                    options:
+                            jpeg_quality: 85
+                            png_compression_level: 8
+                            webp_quality: 85
 
         header_small:
             filters:
                 thumbnail:
                     size: [768, 432]
                     mode: inset
+                    options:
+                            jpeg_quality: 85
+                            png_compression_level: 8
+                            webp_quality: 85
 
         header_default:
             filters:
                 thumbnail:
                     size: [480, 270]
                     mode: inset
+                    options:
+                            jpeg_quality: 85
+                            png_compression_level: 8
+                            webp_quality: 85
 
 
