--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -2,7 +2,8 @@
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
     driver: "gd"
-
+    
+    # Configure webp format
     webp:
         generate: true
 
@@ -38,6 +39,18 @@ liip_imagine:
                             jpeg_quality: 85
                             png_compression_level: 8
                             webp_quality: 85
+
+        # Taille de la card des produits
+        product_card_thumbnail:
+            filters:
+                thumbnail:
+                    size: [340, 500] # Largeur et hauteur souhaitées pour les produits
+                    mode: outbound
+                    options:
+                        jpeg_quality: 85
+                        png_compression_level: 8
+                        webp_quality: 85
+
 
         product_large:
             filters:
