--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/dotenv": "6.2.*",
         "symfony/event-dispatcher": "6.2.*",
         "symfony/expression-language": "6.2.*",
+        "symfony/filesystem": "6.2.*",
         "symfony/flex": "^2",
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
