--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    app.path.product_images: '%kernel.project_dir%/public/uploads/images/products'
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -32,6 +32,11 @@ services:
     App\Admin\Field\VichImageField:
         tags: ['easyadmin.field']
 
+    App\EventListener\ProductImageRemoveListener:
+        arguments:
+            $targetDirectory: '%app.path.product_images%'
+        tags:
+            - { name: doctrine.event_listener, event: preRemove }
 
 
 
