--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -6,12 +6,12 @@ vich_uploader:
 
     mappings:
         products:
-            uri_prefix: '%env(APP_DOMAIN)%/uploads/images/products'
+            uri_prefix: /uploads/images/products
             upload_destination: '%kernel.project_dir%/public/uploads/images/products'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
         header_image:
-            uri_prefix: '%env(APP_DOMAIN)%/uploads/images/headers'
+            uri_prefix: /uploads/images/headers
             upload_destination: '%kernel.project_dir%/public/uploads/images/headers'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
             delete_on_remove: true
