--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "autoprefixer": "^10.4.14",
         "flowbite": "^1.6.5",
